--- a/miniprojet/assets/styles/sass/style.scss
+++ b/miniprojet/assets/styles/sass/style.scss
@@ -19,6 +19,27 @@ body
         display: none;
     }
     
+    .open 
+    {
+        display: block;
+    }
+    
+    .close 
+    {
+        display: none;
+    }
+    
+    .style
+    {
+        grid-column: 1 / 3;
+        border-top: 1px solid;
+    }
+    
+    .border-none
+    {
+        border: none;
+    }
+    
     header
     {
         display: grid;
@@ -60,7 +81,7 @@ body
         
         section:last-of-type
         {
-            border-bottom: 1px solid;
+        
         }
     }
     
@@ -113,24 +134,14 @@ body
                     
                 }
                 
-                .submenu.open
-                {
-                    display: block;
-                        
-                }
-                    
-                .submenu.close
-                {
-                    display: none;
-                        
-                }
             }
         }
         
         section
         {
-            
+            border-top: 1px solid;
         }
+        
     }
     
 }
