--- a/miniprojet/assets/styles/css/style.css
+++ b/miniprojet/assets/styles/css/style.css
@@ -77,8 +77,11 @@ body .style {
   grid-column: 1/3;
   border-top: 1px solid;
 }
-body .border-none {
-  border: none;
+body .border-right {
+  border-right: 1px solid;
+  display: flex;
+  column-gap: 4em;
+  padding-top: 2vh;
 }
 body header {
   display: grid;
@@ -86,7 +89,6 @@ body header {
   height: 15vh;
 }
 body header section:first-of-type {
-  border-right: 1px solid;
   display: flex;
   column-gap: 4em;
   padding-top: 2vh;
