--- a/miniprojet/assets/styles/sass/style.scss
+++ b/miniprojet/assets/styles/sass/style.scss
@@ -35,9 +35,12 @@ body
         border-top: 1px solid;
     }
     
-    .border-none
+    .border-right
     {
-        border: none;
+        border-right: 1px solid;
+        display: flex;
+        column-gap: 4em;
+        padding-top: 2vh;
     }
     
     header
@@ -48,7 +51,6 @@ body
         
         section:first-of-type
         {
-            border-right:  1px solid;
             display: flex;
             column-gap: 4em;
             padding-top: 2vh;
