--- a/miniprojet/assets/styles/css/style.css
+++ b/miniprojet/assets/styles/css/style.css
@@ -135,5 +135,29 @@ body main aside nav ul li {
 body main section {
   border-top: 1px solid;
 }
+body main section h2 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #0077b6;
+  font-weight: 700;
+  margin-bottom: 4rem;
+}
+body main section section:first-of-type {
+  border: none;
+}
+body main section section:first-of-type .add-btn {
+  background-color: #023E8A;
+  color: white;
+  padding: 0.7rem 1.2rem;
+  margin-bottom: 10vh;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 0.2rem;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+body main section section:last-of-type {
+  border: none;
+}
 
 /*# sourceMappingURL=style.css.map */
